--- a/index.css
+++ b/index.css
@@ -10,14 +10,22 @@ body {
     color: black;
     font-family: 'Avenir', Arial, Helvetica, sans-serif;
     margin: 0;
-    padding: 0;
+    padding: 100;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Full viewport height */
+    min-height: 100vh; /* Minimum height to allow scrolling */
     text-align: center;
+    overflow-y: auto; /* Enable vertical scrolling */
 }
 
 .div-block-4 {
     text-align: center;
+    padding-top: 20px; /* Add padding from the top */
+}
+
+.div-block-4 img {
+    width: 50%; /* Adjust the width as needed */
+    max-width: 1600px; /* Optional: set a maximum width */
+    height: auto; /* Maintain aspect ratio */
 }
