--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@ body {
 .div-block-4 {
     text-align: center;
     position: relative;
+    z-index: 1; /* Ensure text is above the image */
     width: 100%; /* Adjust width as needed */
     max-width: 1200px; /* Optional: set a maximum width */
     margin: 0 auto; /* Center the div horizontally */
@@ -65,11 +66,24 @@ body {
 }
 
 a {
-    color: rgb(255, 255, 255); /* Set link color to red */
     text-decoration: none; /* Remove underline */
-    font-size: 16px; /* Ensure the same font size */
+    color: rgb(255, 255, 255); /* Set color to white */
 }
 
 a:hover {
     text-decoration: underline; /* Add underline on hover */
+}
+
+.title-left {
+    color: rgb(0, 0, 255); /* Set color to blue */
+    flex: 1;
+    text-align: right;
+    font-size: 85px; /* Ensure the same font size */
+}
+
+.title-right {
+    color: rgb(255, 0, 0); /* Set color to blue */
+    flex: 1;
+    text-align: left;
+    font-size: 85px; /* Ensure the same font size */
 }
