--- a/index.css
+++ b/index.css
@@ -161,19 +161,24 @@ a:hover {
 }
 @media (max-width: 600px) {
     .linyer-tab-link {
-        font-size: 1rem;
+        font-size: 0.9rem;
         padding: 2px 0;
     }
-    .div-block-4 {
-        max-width: 100vw;
-        padding: 0 4px;
-        height: auto;
+    .linyer-tab-center .linyer-tab-link {
+        font-size: 2.5rem !important;
     }
-    img {
-        max-width: 100vw;
-        height: auto;
+    .linyer-tab {
+        padding: 6px 0px 6px 0px;
     }
-    .text-left, .text-right {
+    body {
+        padding: 20px 4px 40px 4px;
+    }
+    .overlay {
+        font-size: 3rem !important;
+        padding: 0 8px;
+    }
+    .img-hover-text {
         font-size: 0.9rem;
+        padding: 8px;
     }
 }
