--- a/index.css
+++ b/index.css
@@ -162,7 +162,7 @@ a:hover {
 @media (max-width: 600px) {
     .linyer-tab-link {
         font-size: 0.9rem;
-        padding: 2px 0;
+        padding: 6px 0;
     }
     .linyer-tab-center .linyer-tab-link {
         font-size: 2.5rem !important;
@@ -170,15 +170,23 @@ a:hover {
     .linyer-tab {
         padding: 6px 0px 6px 0px;
     }
+    .linyer-tab-left {
+        margin-left: 6px;
+        font-size: 0.9rem;
+    }
+    .linyer-tab-right {
+        margin-right: 6px;
+        font-size: 0.9rem;
+    }
     body {
         padding: 20px 4px 40px 4px;
     }
     .overlay {
-        font-size: 3rem !important;
+        font-size: 2.5rem !important;
         padding: 0 8px;
     }
     .img-hover-text {
-        font-size: 0.9rem;
+        font-size: 0.6rem;
         padding: 8px;
     }
 }
