--- a/index.css
+++ b/index.css
@@ -25,16 +25,21 @@
 }
 .img-columns {
     display: flex;
-    gap: 160px;
-    justify-content: center;
-    align-items: flex-start;
+    flex-wrap: nowrap;
+    gap: 2vw;
+    justify-content: stretch;
+    align-items: stretch;
+    width: 100vw;
+    max-width: 100vw;
+    margin: 0 auto;
 }
 .img-col {
     flex: 1 1 0;
     display: flex;
     flex-direction: column;
-    gap: 160px;
+    gap: 2vw;
     min-width: 0;
+    max-width: 33vw;
 }
 @media (max-width: 800px) {
     .img-columns {
@@ -55,13 +60,41 @@ body::-webkit-scrollbar {
 
 .img-hover-container {
     position: relative;
-    display: inline-block;
-    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    aspect-ratio: 4/3;
+    height: auto;
+@media (max-width: 1200px) {
+    .img-columns {
+        gap: 1vw;
+    }
+    .img-col {
+        max-width: 50vw;
+    }
+}
+@media (max-width: 900px) {
+    .img-columns {
+        flex-direction: column;
+        gap: 0;
+    }
+    .img-col {
+        max-width: 100vw;
+    }
+    .img-hover-container {
+        width: 100vw;
+        min-width: 120px;
+    }
+}
+    background: #fff;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 .hover-img {
-    display: block;
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain;
     transition: filter 0s;
 }
 .img-hover-text {
@@ -144,7 +177,7 @@ a:hover {
     letter-spacing: 2px;
 }
 .linyer-tab-center .linyer-tab-link {
-     font-size: 4rem !important;
+     font-size: 2.2rem !important;
      font-family: 'TXT', Arial, Helvetica, sans-serif !important;
 }
 .linyer-tab-right {
@@ -157,7 +190,7 @@ a:hover {
     text-decoration: none;
 }
 .active-lang {
-    text-decoration: underline !important;
+    color: red !important;
 }
 @media (max-width: 600px) {
     .linyer-tab-center .linyer-tab-link {
